[package]
name = "winit_softbuffer_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.186"
xbar_core = { git = "https://github.com/beamiter/xbar_core.git" }
shared_structures = { git = "https://github.com/beamiter/shared_structures.git", features = ["use-futex"] }
softbuffer = "0.4.8"
pango = "0.22.8"
cairo-rs = "0.22.0"
log = "0.4.33"
winit = "0.30.13"
anyhow = "1.0.103"
bytemuck = "1.25.1"
