[package]
name = "winit_softbuffer_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.186"
xbar_core = { git = "https://github.com/beamiter/xbar_core.git", default-features = false, features = [
    "clock-chrono",
    "logging-flexi",
    "provider-alsa",
    "provider-battery-sysfs",
    "provider-brightnessctl",
    "provider-system",
    "render-cairo",
    "runtime-linux",
    "transport-shared",
] }
softbuffer = "0.4.8"
pango = "0.22.8"
cairo-rs = "0.22.0"
log = "0.4.33"
winit = "0.30.13"
anyhow = "1.0.103"
bytemuck = "1.25.1"
